--- a/info.yaml
+++ b/info.yaml
@@ -3,7 +3,7 @@ project:
   title:        "AES S-Box"      # Project title
   author:       "Utsav Banerjee"      # Your name
   discord:      ""      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
-  description:  ""      # One line description of what your project does
+  description:  "Advanced Encryption Standard (AES) Substitution Box (S-Box)"      # One line description of what your project does
   language:     "Verilog" # other examples include SystemVerilog, Amaranth, VHDL, etc
   clock_hz:     0       # Clock frequency in Hz (or 0 if not applicable)
 
